syntax = "proto3";

package erc20.types.v1;

message BalanceChanges {
  repeated BalanceChange balance_changes = 1;
}

message BalanceChange {
  string contract = 1; // 0xmytokencontract
  string owner = 2;  // 0xmyaddress
  string old_balance = 3; // 0x1234
  string new_balance = 4; // 0x1234

  string transaction = 5; // 0xmytransaction
  string storage_key = 6; // 0xmykey
  string call_index = 7; // 0xmycallindex

  string transfer_value = 8; // 0x1234

  bool is_valid = 9;
}

message ValidBalanceChangeStats {
  float total_balance_change_count = 1;
  float valid_balance_change_count = 2;
  float valid_ratio = 3;

  uint64 block_number = 4;
}